<resources>

    <string name="app_name">DriveNext</string>
    <string name="default_web_client_id">523834459733-9j7qthoaqqj3b7ncuv76diqdi267f5a5.apps.googleusercontent.com</string>
    <string name="login_success">Авторизация успешна</string>
    <string name="register_success">Регистрация успешна</string>
    <string name="login_error">Неверная почта или пароль</string>
    <string name="network_error">Ошибка сети</string>
    <string name="google_signin_error">Ошибка Google Sign-In</string>
    <string name="google_auth_error">Ошибка авторизации</string>
    <string name="firebase_error">Ошибка FireBase</string>
    <string name="error_internet">Ошибка сети: </string>
    <string name="btn_login">Войти</string>
    <string name="btn_google_login">Войти через Google</string>
    <string name="btn_login_in_acc">Войдите в аккаунт</string>
    <string name="btn_pleace_input">Пожалуйста, введите свои данные</string>
    <string name="btn_email">Электронная почта</string>
    <string name="email">email</string>
    <string name="email_up">Email</string>
    <string name="btn_email_input">Введите электронную почту</string>
    <string name="btn_password">Пароль</string>
    <string name="password">password</string>
    <string name="btn_password_input">Введите пароль</string>
    <string name="btn_password_forgott">Забыли пароль?</string>
    <string name="btn_go_to_register">Зарегистрироваться</string>
    <string name="url">http://10.0.2.2:8080</string>


    <string name="main_activity">Главный экран</string>

    <string name="no_retry_one">Все еще нет сети Попробуйте позже</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="check_connection">Проверьте подключение и повторите попытку</string>
    <string name="retry_one">Повторить попытку</string>

    <string name="youre_welcome">Добро пожаловать</string>
    <string name="we_help_you">Мы поможем тебе найти поездку</string>
    <string name="comfortable">Удобно</string>
    <string name="auto_here">Выбирай машины поблизости</string>
    <string name="go">Поехали</string>
    <string name="beggin_now">Начни своё путешествие прямо сейчас</string>


    <string name="input_correct_email">Введите корректный адрес электронной почты</string>
    <string name="password_not_twims">Пароли не совпадают</string>
    <string name="checkbox">Необходимо согласиться с условиями
        обслуживания и политикой конфиденциальности
    </string>
    <string name="ddmmyyyy">DDMMYYYY</string>
    <string name="data_mask">DD/MM/YYYY</string>
    <string name="mask">%02d%02d%04d</string>
    <string name="format">%s/%s/%s</string>
    <string name="all_input">Пожалуйста, заполните все обязательные поля</string>
    <string name="correct_birthDay">Введите корректную дату рождения</string>
    <string name="firstname">firstName</string>
    <string name="lastname">lastName</string>
    <string name="middlename">middleName</string>
    <string name="birthDate">birthDate</string>
    <string name="genderId">genderId</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="data">data</string>
    <string name="upload_photo_passport_licence">Пожалуйста, загрузите фото паспорта и водительского удостоверения</string>
    <string name="user_alreade_exist">Пользователь уже существует</string>
    <string name="connect_Male">Присоединился</string>
    <string name="connect_Female">Присоединилась</string>
    <string name="ProfileFragment">ProfileFragment</string>
    <string name="file">file</string>
    <string name="profile_photo">profile_photo.jpg</string>
    <string name="profile_photo_load">Фото профиля успешно загружено</string>
    <string name="error_load_photo">Ошибка загрузки фото:</string>







    <string name="galerry">Выбрать из галереи</string>
    <string name="make_photo">Сделать фото</string>
    <string name="add_photo_profil">Добавить фото профиля</string>
    <string name="upload_licence_photo">Пожалуйста, загрузите фото водительского удостоверения</string>
    <string name="upload_passport_photo">Пожалуйста, загрузите фото паспорта</string>
    <string name="correctly_data_get">Введите корректную дату выдачи</string>
    <string name="then_correctly">Номер должен содержать ровно 10 цифр</string>

    <string name="skip">Пропустить</string>
    <string name="onboarding_pages">Onboarding pages</string>
    <string name="next">Далее</string>
    <string name="details">Детали</string>
    <string name="redervation">Забронировать</string>
    <string name="back">Назад</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="new_password">Придумайте пароль</string>
    <string name="retry_password">Повторите пароль</string>
    <string name="accept_police">
        Я согласен с условиями обслуживания и политикой конфиденциальности
    </string>

    <string name="ru_firstname">Имя</string>
    <string name="ru_username">Имя пользователя</string>
    <string name="input_firstname">Введите мя</string>
    <string name="ru_lastname">Фамилия</string>
    <string name="input_lastname">Введите фамилию</string>
    <string name="ru_middlename">Отчество</string>
    <string name="input_middlename">Введите отчество</string>
    <string name="calender">Календарь</string>
    <string name="ru_birthDate">Дата рождения</string>
    <string name="ru_genderId">Пол</string>
    <string name="ru_Male">Мужской</string>
    <string name="ru_Female">Женский</string>
    <string name="photo_profil">Фото профиля</string>
    <string name="add_photo">Добавить фото</string>
    <string name="help_owners">Добавление фотографии поможет владельцам
        и арендаторам узнать друг друга, когда они будут забирать машину
    </string>
    <string name="num_licence">Номер водительского удостоверения</string>
    <string name="num_zero">0000000000</string>
    <string name="data_get">Дата выдачи</string>
    <string name="upload_photo_licence">Загрузите фото водительского удостоверения</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="upload_photo_passport">Загрузите фото паспорта</string>
    <string name="error_parse_date">Ошибка парсинга даты: </string>


    <string name="use_funny">Пользуйтесь с удовольствием</string>
    <string name="sucesfull">Успешно</string>
    <string name="congratulate">Поздравляем!</string>
    <string name="you_sucesfull_register">Вы успешно зарегистрировались.
        \nОбработка ваших персональных данных займет около двух часов. Спасибо за ожидание.
    </string>
    <string name="help2">Поможем найти твою следующую поездку</string>

    <string name="user_avatar">Ваш аватар</string>
    <string name="logout">Выйти из профиля</string>
    <string name="error_loading">Не удалось загрузить данные. Попробуйте снова.</string>
    <string name="retry">Повторить</string>

    <string name="home">Главная</string>
    <string name="results">Результаты поиска</string>
    <string name="date_settings">Присоединился в июле 2024</string>
    <string name="change_pass">Поменять пароль</string>
    <string name="google">Google</string>
    <string name="logout_acc">Выйти из профиля</string>
    <string name="search">Поиск</string>
    <string name="search_auto">Поиск автомобиля</string>
    <string name="lets_found">Давайте найдем автомобиль</string>
    <string name="app_prefs">app_prefs</string>
    <string name="openHomeFragment">openHomeFragment</string>
    <string name="user_email">user_email</string>
    <string name="error_upload">Ошибка обработки изображения</string>
    <string name="query">query</string>
    <string name="kia">Kia</string>
    <string name="cars">cars</string>
    <string name="fromHome">fromHome</string>
    <string name="inputMark">Введите марку автомобиля</string>

    <string name="error_search">Не удалось выполнить поиск. Попробуйте снова</string>

    <string name="theme">Тема</string>
    <string name="help">Помощь</string>
    <string name="come_friend">Пригласи друга</string>
    <string name="notifications">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="reservation">Бронирования</string>
    <string name="my_reservation">Бронирования</string>
    <string name="my_auto_connect">Подключить свой автомобиль</string>
    <string name="sucsec_img_load">Изображение успешно загружено</string>
    <string name="error_load_img">Ошибка загрузки изображения: </string>
    <string name="settingsFragment">SettingsFragment</string>
    <string name="error_load_data">Ошибка загрузки данных пользователя: </string>
    <string name="no_date">Дата не указана</string>





    <string name="fuel">Бензин</string>
    <string name="at">Автомат</string>
    <string name="marka">Марка</string>
    <string name="brend">Бренд</string>
    <string name="price">₽ 500 / час</string>



</resources>