<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_login_in_acc"
            android:textColor="@color/purple"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_pleace_input"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_email"
            android:textColor="#404040"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_register"
            android:hint="@string/btn_email_input"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_password"
            android:textColor="#404040"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_register"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="10dp"
            android:hint="@string/btn_password_input"
            android:inputType="textPassword"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_password_forgott"
            android:textColor="@color/purple"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_register"
            android:drawableLeft="@drawable/ic_google"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="90dp"
            android:paddingEnd="90dp"
            android:text="@string/btn_google_login"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/btnGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_go_to_register"
            android:textColor="@color/purple"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
