<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/create_acc"
                android:textColor="@color/purple"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/ivProfilePhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/photo_profil"
                android:scaleType="centerCrop"
                android:src="@drawable/photo" />

            <ImageView
                android:id="@+id/ivAddPhotoIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/add_photo"
                android:padding="4dp"
                android:src="@drawable/vector" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/help_owners"
            android:textColor="#404040"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/num_licence"
            android:textColor="#404040"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDriverLicenseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_register"
            android:hint="@string/num_zero"
            android:inputType="number"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/data_get"
            android:textColor="#404040"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_register"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp">

            <ImageView
                android:id="@+id/ivCalendarLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/calender"
                android:src="@drawable/ic_calendar" />

            <EditText
                android:id="@+id/etDriverLicenseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/data_mask"
                android:inputType="date" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/upload_photo_licence"
            android:textColor="#404040"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUploadLicense"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/upload_photo"
                android:src="@drawable/upload" />

            <TextView
                android:id="@+id/tvUploadLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/upload_photo"
                android:textColor="@color/purple"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLicenseError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/upload_photo_passport"
            android:textColor="#404040"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUploadPassport"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/upload_photo"
                android:src="@drawable/upload" />

            <TextView
                android:id="@+id/tvUploadPassport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/upload_photo"
                android:textColor="@color/purple"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPassportError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnNextStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="@string/next"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
