<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/app_name"
        android:textColor="@color/purple"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/help2"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="0.5"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo" />

    <Button
        android:id="@+id/btnLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_register"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/btn_go_to_register"
        android:textSize="12sp" />
</LinearLayout>
