<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/create_acc"
                android:textColor="@color/purple"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_email"
            android:textColor="#404040"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_register"
            android:hint="@string/btn_email_input"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:textSize="16sp" />

        <!-- Пароль -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/new_password"
            android:textColor="#404040"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_register"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/btn_password_input"
            android:inputType="textPassword"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/retry_password"
            android:textColor="#404040"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_register"
            android:drawableEnd="@drawable/ic_eye"
            android:drawablePadding="10dp"
            android:hint="@string/btn_password_input"
            android:inputType="textPassword"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/accept_police"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Кнопка Далее -->
        <Button
            android:id="@+id/btnNextStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="Далее"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
