<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navigation_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:defaultNavHost="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Home Button -->
        <FrameLayout
            android:id="@+id/nav_home_container"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_reservation_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33">

            <ImageView
                android:id="@+id/nav_home_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_home_active"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/nav_home_inactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_home"
                android:visibility="gone" />
        </FrameLayout>

        <!-- Reservation Button -->
        <FrameLayout
            android:id="@+id/nav_reservation_container"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/reservation"
            app:layout_constraintStart_toEndOf="@id/nav_home_container"
            app:layout_constraintEnd_toStartOf="@id/nav_settings_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33">

            <ImageView
                android:id="@+id/nav_reservation_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_reservation_active"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/nav_reservation_inactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_reservation"
                android:visibility="visible" />
        </FrameLayout>

        <!-- Settings Button -->
        <FrameLayout
            android:id="@+id/nav_settings_container"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/settings"
            app:layout_constraintStart_toEndOf="@id/nav_reservation_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33">

            <ImageView
                android:id="@+id/nav_settings_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_settings_active"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/nav_settings_inactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_settings"
                android:visibility="visible" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>